--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,12 @@
 	</head>
 	<body>
 
-
-	<%= render 'layouts/header' %>
-
-
-	<%= yield %>
-
-
-	<%= render 'layouts/footer' %>
-
+		<%= render 'layouts/header' %>
+			<div class="container">
+				<p class="notice"><%= notice %></p>
+			  <p class="alert"><%= alert %></p>
+				<%= yield %>
+		<%= render 'layouts/footer' %>
+		</div>
 	</body>
 </html>
