changes to contact page made

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
 
 
-<h1>Welcome to Etsydemo!</h1>
-<h2>Etsydemo is an online marketplace for buying and selling handmade goods.</h2>
+<h1>Welcome to Artsy!</h1>
+<h2>This is a website created for people to post things for sale!</h2>
